tests/baselines/reference/inheritanceGrandParentPrivateMemberCollisionWithPublicMember.errors.txt
tests/cases/compiler/inheritanceGrandParentPrivateMemberCollisionWithPublicMember.ts(7,7): error TS2416: Class 'C' incorrectly extends base class 'B':
  Private property 'myMethod' cannot be reimplemented.


==== tests/cases/compiler/inheritanceGrandParentPrivateMemberCollisionWithPublicMember.ts (1 errors) ====
    class A {
        private myMethod() { }
    }
    
    class B extends A { }
    
    class C extends B {
          ~
!!! error TS2416: Class 'C' incorrectly extends base class 'B':
!!! error TS2416:   Private property 'myMethod' cannot be reimplemented.
        public myMethod() { }
    }
    